Add tab structure to updates

--- a/content/product-updates/v1.4.0.md
+++ b/content/product-updates/v1.4.0.md
@@ -62,33 +62,6 @@ A global profiler configuration page has been implemented for the data profiler.
 Based on the latest failed test cases, a sample of failed rows will be displayed in the Incident Manager. Users can quickly verify the cause of failure based on this sample data. The failed sample data will be deleted once the issue is resolved. This is a Collate only feature.
 
 ## Changelog
-
-### Backward Incompatible Changes
-
-Tooling:
-
-- Metadata Backup/Recovery is deprecated. No further support will be provided.
-- Users are advised to use database native tools to backup and store it in their object store for recovery.
-- bootstrap/bootstrap_storage.sh has been deprecated in favor of bootstrap/openmetadata-ops.sh
-
-
-
-UI:
-
-- Activity has been improved. New update specific cards display critical information such as data quality test case updates, description, tag update or removal.
-- For Lineage, the Expand All button has been removed. A new Layers button is introduced at the bottom left corner. With the Layers button, you can add Column Level Lineage or Data Observability details to your Lineage view.
-- View Definition is now renamed as Schema Definition.
-- Adding Glossary Term view is improved. Now we show glossary terms hierarchically enabling a better understanding of how the terms are setup while adding it to a table or dashboard.
-- For Classification, users can set classification to be mutually exclusive only **at the time of creation**. Once created, you cannot change it back to mutually non-exclusive or vice-versa. This is to prevent conflicts of adding multiple tags that belong to same classification and later turning the mutually exclusive flag back to true.
-
-
-
-API:
-
-- Table Schema's ViewDefinition is now renamed to SchemaDefinition to capture Tables' Create Schema.
-- Bulk Import API now creates entities if they are not present during the import.
-- Table's TestSuite is migrated to EntityReference. Previously it used to store entire payload of TestSuite.
-
 ### Automations (Collate)
 
 - Easily maintain high-quality metadata at scale with automations. The Automations streamline governance processes from ownership assignments to tagging, ensuring compliance and consistency.
@@ -223,4 +196,30 @@ API:
 - Improved the usage of the refresh token.
 - Redundant scroll bars have been removed from the UI.
 - Improved the bot role binding to provide more control over which roles are passed to the system bots.
+
+## Breaking Changes
+
+### Tooling
+
+- Metadata Backup/Recovery is deprecated. No further support will be provided.
+- Users are advised to use database native tools to backup and store it in their object store for recovery.
+- bootstrap/bootstrap_storage.sh has been deprecated in favor of bootstrap/openmetadata-ops.sh
+
+
+### UI
+
+- Activity has been improved. New update specific cards display critical information such as data quality test case updates, description, tag update or removal.
+- For Lineage, the Expand All button has been removed. A new Layers button is introduced at the bottom left corner. With the Layers button, you can add Column Level Lineage or Data Observability details to your Lineage view.
+- View Definition is now renamed as Schema Definition.
+- Adding Glossary Term view is improved. Now we show glossary terms hierarchically enabling a better understanding of how the terms are setup while adding it to a table or dashboard.
+- For Classification, users can set classification to be mutually exclusive only **at the time of creation**. Once created, you cannot change it back to mutually non-exclusive or vice-versa. This is to prevent conflicts of adding multiple tags that belong to same classification and later turning the mutually exclusive flag back to true.
+
+
+### API
+
+- Table Schema's ViewDefinition is now renamed to SchemaDefinition to capture Tables' Create Schema.
+- Bulk Import API now creates entities if they are not present during the import.
+- Table's TestSuite is migrated to EntityReference. Previously it used to store entire payload of TestSuite.
+
+
 
