--- a/content/product-updates/v1.7.0.md
+++ b/content/product-updates/v1.7.0.md
@@ -103,16 +103,6 @@ This seamless, two-way metadata synchronization enables powerful governance use-
 
 ## Changelog
 
-### Breaking changes
-
-#### Removing Support for Python 3.8
-
-Python 3.8 was [officially EOL on 2024-10-07](https://devguide.python.org/versions/). Some of our dependencies have already started removing support for higher versions, and we are following suit to ensure we are using the latest and most stable versions of our dependencies.
-
-
-
-This means that for Release 1.7, the supported Python versions for the Ingestion Framework are 3.9, 3.10, and 3.11.We were already shipping our Docker images with Python 3.10, so this change should not affect you if you are using our Docker images. However, if you installed the openmetadata-ingestion package directly, please make sure to update your Python version to 3.9 or higher.
-
 ### Expanded Connector Ecosystem and Diversity
 
 OpenMetadata's ingestion framework contains 90+ native connectors. These connectors are the foundation of the platform and bring in all the metadata your team needs: technical metadata, lineage, usage, profiling, etc.
@@ -131,4 +121,15 @@ And in Collate, we are bringing a new Pipeline connector:
 
 
 **Wherescape**.
+
+## Breaking changes
+
+### Removing Support for Python 3.8
+
+Python 3.8 was [officially EOL on 2024-10-07](https://devguide.python.org/versions/). Some of our dependencies have already started removing support for higher versions, and we are following suit to ensure we are using the latest and most stable versions of our dependencies.
+
+
+This means that for Release 1.7, the supported Python versions for the Ingestion Framework are 3.9, 3.10, and 3.11.We were already shipping our Docker images with Python 3.10, so this change should not affect you if you are using our Docker images. However, if you installed the openmetadata-ingestion package directly, please make sure to update your Python version to 3.9 or higher.
+
+
 
