--- a/content/product-updates/v1.6.0.md
+++ b/content/product-updates/v1.6.0.md
@@ -9,17 +9,9 @@ date: Released on 10th December 2024.
 
 Understanding complex database schemas can be challenging without clear visualization. While OpenMetadata's best-in-class Lineage UI helps track data flow, there are better options for viewing structural relationships between tables. Collate 1.6 introduces ER diagrams as a new feature to let you:
 
-
-
-false. Visualize table connections through primary and foreign key constraints
-
-
-false. Navigate between data assets to discover relationships
-
-
-false. Modify connections using the built-in UI editor
-
-
+- Visualize table connections through primary and foreign key constraints
+- Navigate between data assets to discover relationships
+- Modify connections using the built-in UI editor
 
 ER diagrams help you better understand and manage your data architecture by showing how your database tables relate to each other.
 
@@ -28,7 +20,6 @@ ER diagrams help you better understand and manage your data architecture by show
 ### Establishing Smooth Data Governance with Automated Glossary Approval Workflows (Collate)
 
 Organizations often struggle with data governance due to rigid, pre-defined manual workflows. OpenMetadata 1.6 introduces a new, automated data governance framework designed to be customized to each organization's needs.
-
 
 
 In Collate 1.6, the Glossary Approval Workflow has been migrated to this new framework. Now, you can create custom approval processes with specific conditions and rules and easily visualize them through intuitive workflow diagrams. You can also create smart approval processes for glossary terms with real-time state changes and task creation to save time and streamline work.
@@ -40,7 +31,6 @@ In Collate 1.6, the Glossary Approval Workflow has been migrated to this new fra
 Collate 1.6 also leverages the new data governance framework for a new Data Certification Workflow, allowing you to define your organization's rules to certify your data as Bronze, Silver, or Gold. Certified assets are a great way to help users discover the right data and inform them which data has been properly curated.
 
 
-
 Our vision is to expand our governance framework to allow our users to create their own Custom Governance workflows. We want to enable data teams to implement and automate data governance processes that perfectly fit your organization, promoting data quality and compliance.
 
 <YouTube videoId="hqxtn6uAvt4" />
@@ -48,7 +38,6 @@ Our vision is to expand our governance framework to allow our users to create th
 ### Maintaining a Healthy Data Platform with Observability Dashboards (Collate)
 
 Monitoring data quality and incident management across platforms can be challenging. OpenMetadata has been a pillar for data quality implementations, with its ability to create tests from the UI, native observability alerts, and Incident Manager. It offers data quality insights on a per-table level. .
-
 
 
 In Collate 1.6, we’re introducing platform-wide observability dashboards that allow you to track overall data quality coverage trends and analyze incident response performance across your entire data estate. Quickly identify root causes through enhanced asset and lineage views and enable proactive data quality management across your entire data ecosystem.
@@ -59,18 +48,9 @@ In Collate 1.6, we’re introducing platform-wide observability dashboards that 
 
 Metrics are essential for data-driven organizations, but OpenMetadata previously lacked dedicated metric management, forcing users to use glossary terms as a workaround. The new "Metric" entity in OpenMetadata 1.6 provides a purpose-built solution to:.
 
-
-
-
-false. Document detailed metric calculations and descriptions
-
-
-false. Record calculation formulas and implementation code (Python, Java, SQL, LaTeX)
-
-
-false. Visualize metric lineage from source data to insights
-
-
+- Document detailed metric calculations and descriptions
+- Record calculation formulas and implementation code (Python, Java, SQL, LaTeX)
+- Visualize metric lineage from source data to insights
 
 This new addition helps teams better manage, understand, and calculate their business KPIs, for improved data literacy and consistency across data teams.
 
@@ -81,7 +61,6 @@ This new addition helps teams better manage, understand, and calculate their bus
 OpenMetadata's Roles and Policies enable granular permission control, ensuring appropriate access to metadata across different domains and teams. Some data teams may wish to enable data discovery to search for other tables while still enforcing controls with access requests. Other data teams in more restrictive environments may also wish to control the search experience.
 
 
-
 OpenMetadata 1.6 extends Role-Based Access Control (RBAC) to search functionality, allowing administrators to tailor user search experience. This provides personalized search results, with users only seeing assets they have permission to access, as well as stronger data governance by ensuring users only interact with data within their defined roles and responsibilities.
 
 <YouTube videoId="03ke9uv0PG0" />
@@ -89,7 +68,6 @@ OpenMetadata 1.6 extends Role-Based Access Control (RBAC) to search functionalit
 ### Streamlining Data Management with Additional Enhancements
 
 Release 1.6 comes with several other notable improvements:
-
 
 
 - **Asynchronous Export APIs** : Enjoy increased efficiency when exporting and importing large datasets with new asynchronous APIs.
@@ -109,60 +87,35 @@ Release 1.6 comes with several other notable improvements:
 OpenMetadata’s ingestion framework contains 80+ native connectors. These connectors are the foundation of the platform and bring in all the metadata your team needs: technical metadata, lineage, usage, profiling, etc.
 
 
-
 We bring new connectors in each release, continuously expanding our coverage. This time, release 1.6 comes with seven new connectors:
 
-
-
-false. **OpenAPI**: Extract rich metadata from OpenAPI specifications, including endpoints and schemas.
-
-
-false. **Sigma**: Bringing in your BI dashboard information.
-
-
-false. **Exasol**: Gain insights into your Exasol database, now supported thanks to Nicola Coretti’s OSS contribution!
-
-
+- **OpenAPI**: Extract rich metadata from OpenAPI specifications, including endpoints and schemas.
+- **Sigma**: Bringing in your BI dashboard information.
+- **Exasol**: Gain insights into your Exasol database, now supported thanks to Nicola Coretti’s OSS contribution!
 
 And in Collate, we are bringing four ETL, dashboarding and ML tools:
 
+- Matillion
+- Azure Data Factory
+- Stitch 
+- PowerBI Server 
+- Vertex AI
 
 
-**Matillion, Azure Data Factory, Stitch, PowerBI Server** and **Vertex AI!**
+## Breaking Changes
 
-## Changelog
-
-### Backward Incompatible Changes
-
-**Ingestion Workflow Status:
-
-
-
-**
-
-
+### Ingestion Workflow Status:
 
 We are updating how we compute the success percentage. Previously, we took into account for partial success the results of the Source (e.g., the tables we were able to properly retrieve from Snowflake, Redshift, etc.). This means that we had an error threshold in there were if up to 90% of the tables were successfully ingested, we would still consider the workflow as successful. However, any errors when sending the information to OpenMetadata would be considered as a failure.
 Now, we're changing this behavior to consider the success rate of all the steps involved in the workflow. The UI will then show more Partial Success statuses rather than Failed, properly reflecting the real state of the workflow.
 
 
-
-**Profiler & Auto Classification Workflow:
-
-
-
-**
-
-
+### Profiler & Auto Classification Workflow:
 
 We are creating a new Auto Classification workflow that will take care of managing the sample data and PII classification, which was previously done by the Profiler workflow. This change will allow us to have a more modular and scalable system.
 The Profiler workflow will now only focus on the profiling part of the data, while the Auto Classification will take care of the rest.
 
-
-
 This means that we are removing these properties from the DatabaseServiceProfilerPipeline schema:
-
-
 
 - generateSampleData
 - processPiiSensitive
@@ -170,11 +123,7 @@ This means that we are removing these properties from the DatabaseServiceProfile
 - Adding Glossary Term view is improved. Now we show glossary terms hierarchically enabling a better understanding of how the terms are setup while adding it to a table or dashboard.
 - DatabaseServiceAutoClassificationPipeline schema.
 
-
-
-What you will need to do:
-
-
+**What you will need to do:**
 
 - If you are using the EXTERNAL ingestion for the profiler (YAML configuration), you will need to update your configuration, removing these properties as well.
 - If you still want to use the Auto PII Classification and sampling features, you can create the new workflow from the UI.
@@ -182,13 +131,8 @@ What you will need to do:
 ### RBAC Policy Updates for EditTags
 
 We have given more granularity to the EditTags policy. Previously, it was a single policy that allowed the user to manage any kind of tagging to the assets, including adding tags, glossary terms, and Tiers.
-
-
-
 Now, we have split this policy to give further control on which kind of tagging the user can manage. The EditTags policy has been
 split into:
-
-
 
 - **EditTags**: to add tags.
 - **EditGlossaryTerms**: to add Glossary Terms.
