--- a/content/product-updates/v1.5.6.md
+++ b/content/product-updates/v1.5.6.md
@@ -21,10 +21,8 @@ date: Released on 3rd October 2024.
 - **Fix**: SAML redirect leads to 404 page on UI.
 - **Minor**: Fixed General Profiler Bugs.
 - **Improvement**: Change time format for the created_at of the DBT cloud pipeline status.
-- **Minor**: Fixed role page size from 10 to
-
- 
-false. -   **Fix**: Search Indexing Fixes.
+- **Minor**: Fixed role page size from 10 to 100.
+- **Fix**: Search Indexing Fixes.
 
 - **Improvement**: Collate API with Knowledge Center routes (Collate).
 
