--- a/content/product-updates/v1.7.1.md
+++ b/content/product-updates/v1.7.1.md
@@ -44,7 +44,7 @@ date: Released on 22nd May 2025.
 - Issue with refresh for loggedInUser return
 
  
-false. - Render settings menu based on permissions.
+- Render settings menu based on permissions.
 
 - Data products not visible when redirecting from assets listing to entity page.
 - Make certification always visible.
