--- a/content/product-updates/v1.7.2.md
+++ b/content/product-updates/v1.7.2.md
@@ -88,7 +88,7 @@ date: Released on 10th June 2025.
 - Revert search order and minor styles changes.
 - Bump indices.query.bool.max_clause_count=
 
-false. - Make presidio_analyzer a lazy import in the PII processor.
+- Make presidio_analyzer a lazy import in the PII processor.
 
 - PBI dataset expressions empty value fix.
 - Fix limits & logging.
