--- a/content/product-updates/v1.4.0.md
+++ b/content/product-updates/v1.4.0.md
@@ -15,7 +15,7 @@ We have introduced Automations to easily maintain high-quality metadata at scale
 
 We have added support for bulk uploading data assets. Users can bulk upload database, schema, and table entities from a CSV file for quick edition or creation. The inline editor helps to validate and update the data assets before importing. Save time by bulk uploading data assets.
 
-<YouTube videoId="CXxDdS6AifY" />
+<YouTube videoId="DDJ477r-g3A" />
 
 ### Data Quality Widget
 
