--- a/content/product-updates/v1.7.0.md
+++ b/content/product-updates/v1.7.0.md
@@ -30,7 +30,7 @@ Collate is enhancing AutoPilot by integrating powerful AI Agents that automate c
 
 With Collate AI Agents in AutoPilot, it’s like adding expert team members who streamline metadata management—accelerating onboarding, improving governance, and freeing your team to focus on higher-value tasks.
 
-<YouTube videoId="mn4edHpHZWo" />
+<YouTube videoId="PKvKWZ8vseU" />
 
 ### Customize Your Data Discovery with Enhanced Search Relevancy Settings
 
@@ -99,7 +99,7 @@ With the new Reverse Metadata feature, you can automatically push centralized me
 
 This seamless, two-way metadata synchronization enables powerful governance use-cases—such as automating data masking policies in Snowflake based on centrally managed tags—and turns Collate into a single source of truth at the heart of your end-to-end automated governance strategy.
 
-<YouTube videoId="3RVTwfbgvLQ" />
+<YouTube videoId="EWYDfhCgW8k" />
 
 ## Changelog
 
