--- a/content/product-updates/v1.4.1.md
+++ b/content/product-updates/v1.4.1.md
@@ -2,9 +2,7 @@
 id: 26
 version: v1.4.1
 date: Released on 27th May 2024.
-note: >-
-  In 1.4.1, we provide migration fixes on top of the 1.4.0 release. Don't miss
-  out the release highlights!
+note: In 1.4.1, we provide migration fixes on top of the 1.4.0 release. Don't miss out the release highlights!
 ---
 ## Changelog
 
