--- a/content/product-updates/v1.6.1.md
+++ b/content/product-updates/v1.6.1.md
@@ -2,34 +2,20 @@
 id: 57
 version: v1.6.1
 date: Released on 10th December 2024.
-note: >-
-  In 1.6.1, Fixes tags listing for explore page on top of 1.6.0 release. Don't
-  miss out the release highlights!
+note: In 1.6.1, Fixes tags listing for explore page on top of 1.6.0 release. Don't miss out the release highlights!
 ---
 ## Changelog
 
 ### Backward Incompatible Changes
 
-**Ingestion Workflow Status:
-
-
-
-**
-
-
+**Ingestion Workflow Status:**
 
 We are updating how we compute the success percentage. Previously, we took into account for partial success the results of the Source (e.g., the tables we were able to properly retrieve from Snowflake, Redshift, etc.). This means that we had an error threshold in there were if up to 90% of the tables were successfully ingested, we would still consider the workflow as successful. However, any errors when sending the information to OpenMetadata would be considered as a failure.
 Now, we're changing this behavior to consider the success rate of all the steps involved in the workflow. The UI will then show more Partial Success statuses rather than Failed, properly reflecting the real state of the workflow.
 
 
 
-**Profiler & Auto Classification Workflow:
-
-
-
-**
-
-
+**Profiler & Auto Classification Workflow:**
 
 We are creating a new Auto Classification workflow that will take care of managing the sample data and PII classification, which was previously done by the Profiler workflow. This change will allow us to have a more modular and scalable system.
 The Profiler workflow will now only focus on the profiling part of the data, while the Auto Classification will take care of the rest.
@@ -37,8 +23,6 @@ The Profiler workflow will now only focus on the profiling part of the data, whi
 
 
 This means that we are removing these properties from the DatabaseServiceProfilerPipeline schema:
-
-
 
 - generateSampleData
 - processPiiSensitive
