--- a/content/product-updates/v1.5.2.md
+++ b/content/product-updates/v1.5.2.md
@@ -7,13 +7,13 @@ date: Released on 2nd September 2024.
 
 ### Improvements
 
-- [Fix]: Resolved issue with lineage lookup for long Fully Qualified Names (FQNs), ensuring accurate lineage tracking and display.
-- [Improve]: Fixed the 'Edit Reviewers' permission issue, allowing correct permission management for editing reviewers.
-- [Improve]: Addressed email update issues to ensure that email addresses are properly updated throughout the system.
-- [Improve]: Fixed the delete lineage functionality to handle cases where override lineage is enabled, preventing errors and ensuring consistency.
-- [Improve]: Added support for the 'Edit Assign' button in the Incident Manager, allowing for easier assignment changes.
-- [Improve]: Introduced a resizable layout for the glossary page, improving usability and adaptability to different screen sizes.
-- [Improve]: Enhanced the display of tier tags with improved styling for better visibility and distinction.
-- [Improve]: Pick email and name based on claim values at login. This update ensures that user details are automatically populated during the login process, streamlining user experience.
-- [Improve]: Added custom properties support in Data Product
+- **Fix**: Resolved issue with lineage lookup for long Fully Qualified Names (FQNs), ensuring accurate lineage tracking and display.
+- **Improve**: Fixed the 'Edit Reviewers' permission issue, allowing correct permission management for editing reviewers.
+- **Improve**: Addressed email update issues to ensure that email addresses are properly updated throughout the system.
+- **Improve**: Fixed the delete lineage functionality to handle cases where override lineage is enabled, preventing errors and ensuring consistency.
+- **Improve**: Added support for the 'Edit Assign' button in the Incident Manager, allowing for easier assignment changes.
+- **Improve**: Introduced a resizable layout for the glossary page, improving usability and adaptability to different screen sizes.
+- **Improve**: Enhanced the display of tier tags with improved styling for better visibility and distinction.
+- **Improve**: Pick email and name based on claim values at login. This update ensures that user details are automatically populated during the login process, streamlining user experience.
+- **Improve**: Added custom properties support in Data Product
 
