fix list issues

--- a/content/product-updates/v1.7.0.md
+++ b/content/product-updates/v1.7.0.md
@@ -116,11 +116,7 @@ We bring new connectors in each release, continuously expanding our coverage. Th
 - **Cockroach DB**: The cloud native distributed SQL Database.
 
 
-And in Collate, we are bringing a new Pipeline connector:
-
-
-
-**Wherescape**.
+And in Collate, we are bringing a new Pipeline connector: **Wherescape**.
 
 ## Breaking changes
 
