--- a/content/product-updates/v1.7.1.md
+++ b/content/product-updates/v1.7.1.md
@@ -31,7 +31,7 @@ date: Released on 22nd May 2025.
 - Service insights PDF export.
 - Can't run table diffs on snowflake when using private key authentication.
 - Self signup login error not showing.
-- Service connection config not getting updated with multiple project ids after ingestion .
+- Service connection config not getting updated with multiple project ids after ingestion.
 - Data assets order in explore left panel.
 - Added display name and description in Testcase Alert emails.
 - PostgreSQL schemas getting filtered out.
@@ -41,7 +41,7 @@ date: Released on 22nd May 2025.
 - Mentions on task should trigger @mention alert.
 - Postgres Duplicate table constraint error when re-ingesting.
 - Unsupported Pipeline entity for lineage error.
-- Issue with refresh for loggedInUser return
+- Issue with refresh for loggedInUser return.
 - Render settings menu based on permissions.
 - Data products not visible when redirecting from assets listing to entity page.
 - Make certification always visible.
@@ -60,7 +60,7 @@ date: Released on 22nd May 2025.
 - Support Ingesting Multiple Owners for dbt Models from manifest.json.
 - Error ingesting using Datalake adls connector.
 - PostgreSQL Sample Data Err- FATAL: too many connections for role "role_name".
-- Testcase "Column values to be uniqu- oracledb error (ORA-00937).
+- Testcase "Column values to be unique" oracledb error (ORA-00937).
 - Alert Triggering on Both Failure and Success of the Test Case even if configured for failure only.
 - PBI lineage when source parameters are used and lineage needs to be created from source expression.
 - Comments not reflecting after ingestion for DB columns in Vertica.
