--- a/content/product-updates/v1.8.0.md
+++ b/content/product-updates/v1.8.0.md
@@ -10,7 +10,7 @@ date: Released on 22nd June 2025.
 
 OpenMetadata 1.8 debuts an enterprise-grade MCP server built natively on top of our unified knowledge graph. This new service exposes a single, high-performance API layer that lets any Large Language Model—or any downstream application—pull rich, policy-aware context about your data in real time.
 
-MCP Server:
+### MCP Server:
 
 - **One graph, One endpoint:** The MCP server surfaces every entity, relationship, data quality, lineage and governance you've already enriched in OpenMetadata.
 - **LLM-friendly responses:** JSON schemas are optimized for semantic search and RAG workflows, so your chatbots and copilots can ground answers in trustworthy, up-to-date metadata.
