Changed version to 1.8.10

--- a/content/product-updates/v1.8.10.md
+++ b/content/product-updates/v1.8.10.md
@@ -1,11 +1,11 @@
 ---
-id: 81
-version: v1.8.9
-date: Released on 1st August 2025.
+id: 82
+version: v1.8.10
+date: Released on 5th August 2025.
 ---
 
 ## Changelog
 
 ### Fixes
 
-- Fix Bulk Import to preserve existing metadata when fields are not included in the CSV
+- Fix Bulk Import to preserve existing metadata when fields are not included in the CSV.
