Fix the content

--- a/content/product-updates/v1.9.0.md
+++ b/content/product-updates/v1.9.0.md
@@ -49,7 +49,7 @@ Unify the look and feel with the new platform UX shipped in release 1.8.
 
 The insight tab on service details page now shows live, real-time updates for the service insights summary when AutoPilot workflows are running. The updates include real-time coverage percentages for descriptions, PII tags, tier classifications,ownership, and healthy data assets as well as live counts of total data assets.
 
-The Service Insights tab now also displays live status updates for AutoPilot agents and Collate AI agents as they process data. Users can monitor AutoPilot workflow instances in real-time, including live auto-pilot status data that shows the progress of automated classification, tiering, and data quality processes.
+The Service Insights tab now also displays live status updates for AutoPilot agents as they process data. Users can monitor AutoPilot workflow instances in real-time, including live auto-pilot status data that shows the progress of automated classification, tiering, and data quality processes.
 
 ### Glossary Workflow History
 
