--- a/content/product-updates/v1.8.9.md
+++ b/content/product-updates/v1.8.9.md
@@ -11,8 +11,8 @@ date: Released on 1st August 2025.
 - Remove unnecessary braces in additional_config for cleaner code.
 - Implemented comprehensive Security Service with schema changes, UI integration, and OSS visibility controls.
 - Add backward-compatible support for documented owner configuration in dbt.
-- Implemented configurable sink and reverse metadata support for Ranger, along with cleanup, bug fixes, and UI enhancements. (Colalte)
-- Add lineage propagation enhancements in Automator with stop conditions and propagation depth, along with related UI fixes, configuration support, and test improvements. (Colalte)
+- Implemented configurable sink and reverse metadata support for Ranger, along with cleanup, bug fixes, and UI enhancements. (Collate)
+- Add lineage propagation enhancements in Automator with stop conditions and propagation depth, along with related UI fixes, configuration support, and test improvements. (Collate)
 
 ### Fixes
 
