chore: update v1.10.0 release notes with fixes and improvements

--- a/content/product-updates/v1.10.0.md
+++ b/content/product-updates/v1.10.0.md
@@ -73,8 +73,361 @@ The existing Python SDK is still going to be internally used for the Ingestion F
 
 ### Fixes
 
+- Fix repositories overriding fieldSetters failing to load tags at entity level
+- Fix entities for import CSV to exclude only the fields from CSV
+- Fix contract form design
+- Fix incorrect data model count
+- Fix live charts for service insights
+- Fix user activity tracking
+- Fix glossary term missing from UI in columns search
+- Fix customize page layout for Governance and Data Assets
+- Fix Glossary Term Approval Workflow trigger filters with JsonLogic and exclude fields
+- Fix styling for data contract
+- Fix glossary tab and chart icon issue for persona
+- Fix release dialog flash
+- Fix UI breaking on edit announcement
+- Fix empty chart UI in persona
+- Fix security vulnerabilities
+- Fix curated assets description
+- Fix contract results sort order
+- Fix contract mismatch with existing test suites
+- Fix service insight live update bugs
+- Fix restore existing data contract during PUT operation
+- Fix failing migrations due to charts
+- Fix PT-BR locale owner-plural-with-colon attribute
+- Fix Swagger documentation showing incorrect dataProducts field
+- Fix logger level in sample_data.yaml
+- Fix pagination in sub domains table
+- Fix Grafana support
+- Fix Flowable and Governance Workflow error logging
+- Fix terms vanishing for customized persona in glossary terms
+- Fix soft deleted assets visible in search suggestions
+- Fix docs collate content failure
+- Fix cross service lineage implementation
+- Fix typos in OpenMetadata documentation
+- Fix Airflow compatibility issue with version 2.2.5
+- Fix expand icon after updating column details
+- Fix default persona in user profile
+- Fix user metrics
+- Fix usage failure after cross lineage
+- Fix Match All Tags giving NPE when resource doesn't have tags
+- Fix lineage layers not visible upfront
+- Fix RDF not enabled by default
+- Fix execution time support for NiFi Connector
+- Fix force test connection
+- Fix toggle to see both deleted and non-deleted charts on dashboard page
+- Fix panel alignment in lineage edit mode full screen
+- Fix consistent masking of PII in table column profiling
+- Fix SAP HANA physical schema mapping and column lookup at each layer of calculation view
+- Fix incorrect condition in getDomains() method
+- Fix soft deleted table not showing columns data
+- Fix pagination for Persona listing
+- Fix Snowflake schema tags inheritance
+- Fix UI lag when viewing Kafka topics with large nested schemas
+- Fix system default persona preferences validation
+- Fix ingestion failure for Iceberg tables with nested partition column
+- Fix EntityLink column existence validation during test case creation
+- Fix test case form loading and structure
+- Fix Oracle DataDiff and change Oracle Connection to BaseConnection
+- Fix duplicated documentation about MCP endpoints
+- Fix resource context with invalid entity type
+- Fix auth tokens storage on client using service worker and indexedDB
+- Fix metadata tool
+- Fix tip tap editor bug
+- Fix data product bulk addition with different types
+- Fix data product to asset mapping lost after upgrade
+- Fix Spanish translations
+- Fix Snowflake custom host support for View in Snowflake source URL
+- Fix dbt ingestion pipelines not picking up team names
+- Fix connection pool exhaustion issue
+- Fix missing input sanitization of suggestions query
+- Fix Snowplow JSON changes
+- Fix cross services lineage changes
+- Fix deleted entities restoring with inherited fields
+- Fix users with Data Product edit permission unable to upload images
+- Fix concurrency issues in search
+- Fix Snowflake handling when stream source is not retrievable
+- Fix setInheritedFields for spreadsheet, worksheet, file, directory
+- Fix missing tier mapping
+- Fix contract status button not visible in persona with contract tab
+- Fix contract schema pagination key selection not persisting
+- Fix date formatters according to chosen language
+- Fix BigQuery project selection in Profiler and AutoClassification Workflow
+- Fix environment mode selection (production/dev)
+- Fix newly added test case selection in pipeline
+- Fix entityStatus and reviewers property in index mappings
+- Fix advanced config in service form restricting next action
+- Fix save enable/disable on customize navigation page
+- Fix missing user_activity migrations to 1.9.8
+- Fix array iteration in SearchClient
+- Fix query runner schema
+- Fix shadow around modals
+- Fix column comment getting overridden in Glue and Athena
+- Fix entity icon for global search bar
+- Fix Trino incomplete view definition extraction
+- Fix storage service depth
+- Fix Oracle stored packages test connection
+- Fix notifications and bots API integration
+- Fix scroll on error in test case and test suite form
+- Fix Elasticsearch script compilation limit errors
+- Fix critical security vulnerabilities (Netty, Spring, commons-lang)
+- Fix removed user updating an entity
+- Fix domain filtering support in incident manager
+- Fix noDomain() rule
+- Fix deployIngestionPipeline method
+- Fix None value handling in stored procedure lineage processing
+- Fix select dropdown rerendering on language change
+- Fix owner list restoration after patch update
+- Fix Metabase dataset_query field handling for string and dict types
+- Fix glossary term pagination issues
+- Fix search filter removal in test suite pipeline edit page
+- Fix breadcrumbs in custom property page
+- Fix profiler time series migration
+- Fix NPE error on import/export and race conditions in WebSocket
+- Fix broken 1.9.8 migrations
+- Fix SAP HANA exponential processing lineage parsing
+- Fix DQ test cases fetching by FollowedBy
+- Fix Database Native Data Types handling in OpenLineage
+- Fix stream logger URL
+- Fix Databricks OAuth and Azure AD Auth
+- Fix SSLManager to use dynamic schema registry paths
+- Fix pass/fail count for custom SQL
+- Fix vulnerability
+- Fix Hive Metastore None issue
+- Fix system-default notification templates
+- Fix search index issue due to zero runtime changes
+- Fix Snowflake object types in source URL
+- Fix TypeResource to handle inDefinition references
+- Fix Glossary creation when domain is selected
+- Fix service form bugs
+- Fix mentions in notification box
+- Fix classification scoring
+- Fix MF4 import error
+- Fix missing includeOwners check in dashboard services
+- Fix Superset service form bug
+- Fix worksheet service reference
+- Fix HIERARCHYID data type handling
+- Fix Databricks and Unity Catalog OAuth and Azure AD Auth
+- Fix handling of columns not found or permission issues
+- Fix Drive Service
+- Fix redirect path of mention knowledge article and breadcrumb
+- Fix team error placeholder using wrong permission
+- Fix SSO feedback and improvements
+- Fix PostgreSQL migration immutability issue
+- Fix sampling data from Trino tables with complex types
+- Fix incident status update by Owner role via API
+- Fix Databricks pipeline lineage flow
+- Fix batchFetchClassification for tags
+- Fix security vulnerability
+
 ### Improvements
 
-- Custom Metrics Measurement Units: Added a new field for customUnitOfMeasurement to add user defined metrics such as pounds, decibels etc.
-- Introduced new field **entityStatus** for different dataAssets.
-- Added reviewers to tag, classification, dataProduct, metrics, and knowledge center pages.
+- Add custom measurement units field (pounds, decibels, etc.) for user-defined metrics
+- Add entityStatus field for different data assets
+- Add reviewers to tag, classification, dataProduct, metrics, and knowledge center pages
+- Add Spark Engine documentation
+- Allow admins to set default persona for all users
+- Add Contract Execution Chart Summary Card
+- Enhance sample data and resolve warnings
+- Add navigation blocker for customize my data page
+- Improve Databricks Profiler and Test Connection
+- Add detailed search reindex reporting to Slack with 10mb max content
+- Add displayName support for installed apps endpoint
+- Update rule for dataAssetRule and semantic form contract
+- Enable Bedrock embedding service
+- Update data contract details fields
+- Add Google Sheet connector
+- Add lineage support for Exasol connector
+- Enable Elasticsearch search for databases
+- Add None value filter for Elasticsearch
+- Improve Service Insights with live updates and bug fixes
+- Add Traditional Chinese translation
+- Add app widgets in OSS
+- Add comprehensive GitHub Copilot instructions
+- Refactor BigQuery client type hinting
+- Add multi-domain breaking changes documentation
+- Update documentation for metadata/types API
+- Enhance sample data with owner and descriptions
+- Add PowerBI parse expression along with measure
+- Update data-retention documentation to include activityThreadsRetentionPeriod
+- Update documentation for 1.9.0 release
+- Update sync-doc workflow
+- Improve bulk import by disabling upload dragger when file is processing
+- Improve keyboard delete action in bulk actions
+- Remove lastLoginTime from change description
+- Add Spark UI support
+- Add OpenAPI YAML format support for REST API ingestion
+- Update SECURITY.md to remove support for version 1.6.x
+- Update alerts documentation to include Advanced Configurations
+- Improve PowerBI table naming by preceding source table name
+- Add lineage table support
+- Add RDF Ontology, Json LD, DCAT vocabulary support
+- Add Sankey to ChartType enum
+- Add Tableau entity mapping documentation
+- Add comprehensive documentation for entity field update limitations in Python SDK
+- Add Row Count to Custom SQL Test
+- Add healthcheck on System Resource
+- Add deploy pipeline method to ingestion pipeline repository
+- Improve overall performance
+- Refactor and enhance entity name transformation logic
+- Update asset types in curated assets list
+- Add missing domain migrations for entity version history
+- Refactor DatabaseServiceTablesProcessor and simplify getLatestTableProfile logic
+- Improve Data Contract features
+- Improve Snowflake Tags Ingestion
+- Upgrade Node and migrate from webpack to vite
+- Upgrade MCP to version 0.11.2
+- Use .nvmrc in GitHub workflows
+- Improve knowledge and Glossary/Term page redirect notification link
+- Expose retry_codes parameter in Airflow lineage backend configuration
+- Add order_by to Airflow ingest get_pipelines_list
+- Improve Unity Catalog lineage exception handling
+- Enable sub-domain access with hasDomain() Rule
+- Improve tag_usage performance
+- Add SAP HANA calculated view columns formula parsing logic
+- Open external links in new tab
+- Add queryUsage and other fields for bulk query fetching
+- Add specific endpoint for log downloads in streaming
+- Add backend validations on entity types for Data Contracts
+- Simplify migration context computing
+- Update translations across languages
+- Add JavaScript and CSS in non-filtered extension in pom file
+- Move migrations to version 1.9.5
+- Add rules per entity endpoint
+- Cleanup unused components
+- Improve Automator by separating terms and tags in action config
+- Mask Wherescape MSSQL Password
+- Refactor auth setup to avoid unnecessary logout and login operations
+- Add List import to avoid errors
+- Add Russian Language Support for Elasticsearch Search
+- Update response code for docs and signin page
+- Allow additional fields for custom connectors
+- Pass additional_client_config_arguments to OpenMetadata correctly
+- Add Domain Independent Data Product Rule
+- Improve persona deletion and relations fetch handling
+- Add support for clone queries in BigQuery
+- Improve data insight index for multidomain
+- Optimize login page load performance
+- Remove Spark connector support from UI
+- Add GlossaryTerm Search endpoint
+- Add support for sources key metadata fetch in dbt
+- Add ServiceNow Connector
+- Add Snowplow Connector
+- Enable transient table ingestion by default for Snowflake
+- Rename migration files from v195 to v196
+- Add Unstructured Formats Support to GCS Storage Connector
+- Add support for add/edit semantic rules
+- Document ChangeEventScheduler and Race Condition status
+- Add SSL support to Hive
+- Update API proxy path
+- Improve lineage with multiprocessing, stored procedure temp table processing and filtering
+- Add status and reviewers implementation for assets
+- Add new WorkflowType and converter
+- Add Security, SLA and Terms of Use to Data Contract
+- Allow alerts to notify lineage downstream entities stakeholders
+- Refactor Profiler for Metadata Extraction Application
+- Allow multi-asset selection for curated assets
+- Change contract update from PUT to PATCH
+- Add redirect to persona page when clicked on default persona
+- Restrict column selection to first level in nested columns for DataContract
+- Add entityType.keyword field with lowercase normalizer for case-insensitive search
+- Add App Runner to Application Entity
+- Add chart handling for Data Contract with schema validations
+- Update contract security schema
+- Add custom operator support for array object contains
+- Drop Insights Indexes
+- Add Postgres lineage dialect to Greenplum
+- Add cardinality metric for string and enum types
+- Increase max server threads
+- Add cardinality data distribution chart
+- Add dbt project name display
+- Add support for DBX Exporter
+- Extend application configuration component
+- Add theme setup functionality
+- Implement Custom Metrics Measurement Units
+- Add domain icon and drop-down for multiple domain names
+- Remove embeddings for table index
+- Improve searching via MCP Client
+- Add Security and SLA tab support in data contract
+- Add TypeScript and ESLint checks on dev server
+- Add owner operation support with editOwner and editAll for teams
+- Add Unity Catalog data diff module using DBX connection
+- Add S3 logging from ingestion pipelines
+- Improve Russian translation dictionary
+- Rename contract consumers and improve data display on UI
+- Add MF4 File Reader
+- Add recognizer in classification
+- Add executedQuery field
+- Update contract SLA section list icon
+- Add reviewers to Metrics
+- Update impact analysis styles
+- Optimize mapFields caching in JSONLogicSearchClassBase
+- Add timezone and column name fields support in SLA form
+- Add ML model lineage support
+- Add ignore entities option for Data Product rule
+- Add support for SQL Server hierarchyid, geography, and geometry types
+- Add Domain, Sub-domain, and Data Product listing
+- Improve test connection functionality
+- Improve Datalake column subfields handling
+- Improve advanced search field value suggestions
+- Move popover FQN to classbase for extension
+- Add no record found message for card view
+- Improve async search and tree lazy loading
+- Add Timescale Connector
+- Improve handling of columns not found or permission issues
+- Add logging endpoint to S3
+- Extend ENTITY_TYPE with additional entity types and fields
+- Add encryption for sensitive data in Exporter app
+- Change passed/failed rows to Long type for 64-bit numbers
+- Migrate build tool from terser to esbuild
+- Add NotificationTemplate CRUD operations
+- Revamp persona section in user profile dropdown
+- Update lineage workflow configuration documentation
+- Add entityStatus and reviewers to testCase and testSuite
+- Improve data asset header layout and component styling
+- Add color and iconURL support in glossary import/export
+- Fix duplicate ViewAll migration in OrganizationPolicy
+- Improve dbt debug logs
+- Add Metabase API Key authentication support
+- Ensure domain policy evaluation during PolicyEvaluator
+- Add impact analysis support for lineage
+- Show entityStatus by default after migration
+- Implement zero-downtime reindex
+- Enable log streaming for ingestion pipelines
+- Add entityType.keyword aggregation in searchSettings.json
+- Improve Airflow DAG import error identification in CI
+- Add scroll support in certification popover list
+- Improve timestamp sorting logic in IngestionRecentRuns component
+- Add created_by and created_at info display in UI for DataContract
+- Update contract security form details
+- Improve contract security initial data selection
+- Cleanup orphaned data contracts
+- Add not_contains support in contract semantic form
+- Add threat model and incident response documentation
+- Improve Drive service with bug fixes
+- Add OM Operation to remove security config
+- Add field level validation in SSO configuration
+- Improve ContractExecutionChart to occupy full space with left-aligned bars
+- Add option to opt out of BigQuery Policy Tags Ingestion
+- Implement Modern Fluent API Pattern for OpenMetadata Java Client
+- Update platform info banner logic
+- Add notify downstream functionality with related UI
+- Add support for Tags customizable rules with feedback capture
+- Add running status support in contract execution chart
+- Add entity column list support in contract security form
+- Improve SSO with field level error handling
+- Add notification template validation and reset
+- Add data products widget
+- Update required Node.js version to 22 in prerequisites
+- Add notification for default persona change
+- Improve avatar initial display
+- Add route position support for plugin routes
+- Add SSO configuration UI and SCIM bot token management with Group Mapping
+- Improve Kafka Connect lineage and descriptions
+- Sort data in total data assets widget by count
+- Add createdBy and createdAt for data contracts
+- Add support for Stored Procedures and Functions in MariaDB
+- Skip orphaned pipelines in Secret migrations
+- Revamp data contract UI and functionality
+- Allow team creation on child when creating on parent team
+- Update team entity specific permissions for create and editUser
