--- a/content/product-updates/v1.10.0.md
+++ b/content/product-updates/v1.10.0.md
@@ -31,7 +31,7 @@ The existing Python SDK is still going to be internally used for the Ingestion F
 
 **SSO Mapping Updates**: Improved mapping flexibility to streamline SSO setup and customization.
 
-👉 Try it out here: [SSO Settings]('https://sandbox.open-metadata.org/settings/sso?provider=google')
+👉 Try it out here: [SSO Settings](https://sandbox.open-metadata.org/settings/sso?provider=google)
 
 ### Data Contract UI Improvements
 
