--- a/content/product-updates/v1.10.1.md
+++ b/content/product-updates/v1.10.1.md
@@ -11,7 +11,7 @@ date: Released on 10th October 2025.
 - Fix: Hide owner and domain "Add" button if classification is disabled
 - Fix: Change remove default persona icon
 - Fix: The table column resize handler not visible 
-- Fix: Pin pydantic to <2.12.0 
+- Fix: Pin pydantic to \<2.12.0 
 - Fix: The wrong label displayed on semantic status
 - Fix: Logger level should work for deprecation warnings
 - Fix: Update the node version in Dockerfile (Collate)
