chore: update 1.10.6 and 1.10.7 product updates

--- a/content/product-updates/v1.10.7.md
+++ b/content/product-updates/v1.10.7.md
@@ -8,7 +8,7 @@ date: Released on 18th November 2025.
 
 ### Improvements
 
-- Improve Okta public key URL validation to correctly handle both /oauth2/v1/keys and /oauth2/{authServerId}/v1/keys patterns (#24326)
+- Improve Okta public key URL validation to correctly handle both /oauth2/v1/keys and /oauth2/\{authServerId\}/v1/keys patterns (#24326)
 - Add support for classification tags in dbt meta field (#23671)
 
 ### Bug Fixes
