Update changelog section in v1.10.9 release notes

--- a/content/product-updates/v1.10.9.md
+++ b/content/product-updates/v1.10.9.md
@@ -4,12 +4,14 @@ version: v1.10.9
 date: Released on 27th November 2025.
 ---
 
-## Improvements
+## Changelog
+
+### Improvements
 
 - Add MSSQL SSL support
 - Add Looker support for custom git host & local repo usage
 
-## Fixes
+### Fixes
 
 - Fix NPE in IngestionPipelineRepository update methods for null fields
 - Fix description render on entity pages on non-Chromium browsers
