--- a/content/product-updates/v1.11.0.md
+++ b/content/product-updates/v1.11.0.md
@@ -60,19 +60,19 @@ Build dynamic templates with placeholders
 
 Use double curly brace syntax to insert dynamic fields that automatically populate when alerts trigger:
 
-- {{entity.name}} -- Entity display name
+- `{{entity.name}}` -- Entity display name
 
-- {{entity.owners}} -- Entity owners
+- `{{entity.owners}}` -- Entity owners
 
-- {{entity.description}} -- Entity description
+- `{{entity.description}}` -- Entity description
 
-- {{entity.href}} -- Direct link to the entity
+- `{{entity.href}}` -- Direct link to the entity
 
 - And more
 
 Add conditional logic and rich formatting
 
-Templates support conditional formatting with {{#if}}, {{else}}, and {{/if}} blocks. The rich text editor lets you add bold, italic, code blocks, images, links to assets, and other formatting.
+Templates support conditional formatting with `{{#if}}`, `{{else}}`, and `{{/if}}` blocks. The rich text editor lets you add bold, italic, code blocks, images, links to assets, and other formatting.
 
 Validate before saving
 
