--- a/content/product-updates/v1.11.0.md
+++ b/content/product-updates/v1.11.0.md
@@ -101,7 +101,7 @@ As part of the python changes, we're also updating the default OSS ingestion ima
 
 If you are still using 2.10.X in your own custom images, we will still support that version.
 
-POST `api/v1/dataQuality/testCases` Permission Change
+###  POST `api/v1/dataQuality/testCases` Permission Change
 
 We previously enforced the `EditTests` operations on the `Table` resource for creating test case permission. We have now introduced a new `CreateTests` operation on the `Table` resource for finer grain permission control over create vs edit tests for Table entities.
 
