--- a/content/product-updates/v1.11.1.md
+++ b/content/product-updates/v1.11.1.md
@@ -1,5 +1,5 @@
 ---
-id: 105
+id: 104
 version: v1.11.1
 date: Released on 11th December 2025.
 ---
@@ -9,28 +9,18 @@ date: Released on 11th December 2025.
 ### Fixes
 
 - SAP HANA Connector now correctly identifies view names by reading the resourceUri attribute instead of the data source ID
-- Fixed Incident Manager navigation breadcrumbs to ensure they display correctly across all user routes
-- Corrected PowerBI Report Page URL generation to fix broken links
-- Updated dashboardDataModel to ensure the correct Source URL is mapped in search results
 - Fixed authentication issue for entities with 'version' in name that was incorrectly skipping auth headers
 - Fixed domain widget issue in User Details Page
 - Fixed subdomains data visibility issue due to query params
-- Fixed overlapping of data asset header values and application description on Safari browser
 - Fixed Glossary term circular reference issue with CSV import
-- Fixed 404 error when loading dashboards or other entities that reference deleted glossary terms or tags
-- Fixed PowerBI dataset-upstream dataset column lineage
 - Fixed Sagemaker unified studio registered models
-- Fixed Databricks Ingestion issues
-- Fixed dbt import and testcase creation issues
+- Fixed dbtcloud lineage issues and added environment ID filter
 - Fixed profiler processor status logic to show partial success at metric/column level
 - Fixed Snowflake profiler to use connection account usage setting for system metrics
 - Fixed using wrong indices for lineage queries
-- Fixed query voting functionality by including vote counts in search index
-- Fixed fetching child teams with include=deleted params not working
+- Fixed OIDC session expiry to ensure minimum 1 hour
 - Fixed js-yaml version to resolve security vulnerability
 - Fixed restoring soft deleted assets from ingestion
-- Fixed Airflow 3 scheduling compatibility
-- Fixed OIDC session expiry to ensure minimum 1 hour
 
 ### Features
 
@@ -38,19 +28,13 @@ date: Released on 11th December 2025.
 - Added support for multiple classifications in TagProcessor
 - Added Edit Icon to Update Assignee directly from Incident Manager Page
 - Added search functionality for data type selection in profiler configuration
-- Added edge level side panel in lineage view for better navigation
-- Added sidebar for nodes in lineage view
-- Added Mentions destination category to Tasks and Announcements notifications
 - Added custom properties hint description tooltips for better user guidance
 - Added dbtcloud environment ID filter and fixed lineage issues
 - Added support for MSSQL SSL connections
-- Added dynamic IAM token refresh for AWS RDS authentication
-- Added Looker support to ingest all views from repository
-- Added support for multiple agent types in filtering and API calls
 - Added Collate Credits feature
 - Added Flowable History Timed Cleanup and Ops Command for cleanup
 
-### Improvements
+### UI Improvements
 
 - Fixed right panel across page occurrences with improved width and styling
 - Addressed Explore card feedbacks with improved UX and navigation
@@ -58,10 +42,4 @@ date: Released on 11th December 2025.
 - Added missing entity types support in EntitySummaryPanel and right panel
 - Side panel now handles nested structure in right entity panel for schema tab
 - Replaced static name with brandName throughout the UI for better branding
-- Fixed translation issues and updated Russian translation
-- Format row count and decimal values across the profiler and Data Quality for better readability
-- Exclude deleted entities from search results
 - Disabled name column in bulk edit actions to prevent accidental changes
-- Cache User policies to improve performance
-- Improved dimensionality performance
-
