--- a/content/product-updates/v1.11.1.md
+++ b/content/product-updates/v1.11.1.md
@@ -22,7 +22,7 @@ date: Released on 11th December 2025.
 - Fixed js-yaml version to resolve security vulnerability
 - Fixed restoring soft deleted assets from ingestion
 
-### Features
+### Improvements
 
 - Enhanced Impact Analysis with pagination and improved filters
 - Added support for multiple classifications in TagProcessor
@@ -33,9 +33,6 @@ date: Released on 11th December 2025.
 - Added support for MSSQL SSL connections
 - Added Collate Credits feature
 - Added Flowable History Timed Cleanup and Ops Command for cleanup
-
-### UI Improvements
-
 - Fixed right panel across page occurrences with improved width and styling
 - Addressed Explore card feedbacks with improved UX and navigation
 - Enhanced right panel UX with improved styling and domain edit restriction for data products
